tests/invalid/units_invalid_exponent.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "UnitsInvalidExponent",
    "description": "Invalid file demonstrating dimensional quantity used as exponent (exponents must be dimensionless)",
    "authors": ["Chris Tessum with Claude"],
    "created": "2026-04-16T00:00:00Z"
  },

  "models": {
    "BadUnitsModel": {
      "variables": {
        "base": { "type": "parameter", "units": "m", "default": 2.0, "description": "Base value with length units" },
        "mass": { "type": "parameter", "units": "kg", "default": 3.0, "description": "Mass value used (invalidly) as an exponent" },
        "invalid_power": { "type": "observed", "units": "1", "description": "Invalid: exponent must be dimensionless but 'mass' has units 'kg'",
          "expression": { "op": "^", "args": ["base", "mass"] }
        }
      },
      "equations": []
    }
  }
}
